--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,1 +1,137 @@
-.bg{background-color:#ccd4d6}.bg-white{background-color:#fff}.no-bg{background-color:transparent}.fo-c1{color:#8b8a8a}.fo-c2{color:#363d3f}.brandT{color:#342635}.title{color:#576163;display:-webkit-inline-box;display:-ms-inline-flexbox;display:inline-flex;background-color:#ccd4d6}.btn-wallpaper{color:#edddc4;background-color:#342635;border-color:#342635}.btn-wallpaper:hover{color:#fff}.btn-wallpaper:active,.btn-wallpaper:focus{-webkit-box-shadow:0 0 0 .2rem rgba(20,15,21,.25);box-shadow:0 0 0 .2rem rgba(20,15,21,.25)}.btn-img:after{content:"";width:28px;height:18px;display:inline-block;margin-left:.25rem;vertical-align:text-top;background-color:transparent;background-position:50%;background-repeat:no-repeat;background-size:28px 18px;background-image:url(/images/bird.png?22193407e1c9f71eb6675022440e0808)}.wrapper{position:relative}.wrapper-a{top:0;left:0;right:0;bottom:0;position:static;z-index:100}.content-box{width:100%;height:100%;margin:0 auto;overflow:hidden;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-ms-flex-pack:distribute;justify-content:space-around;display:-webkit-box;display:-ms-flexbox;display:flex}@media (min-width:768px){.px-md-35{padding-left:1.25rem!important;padding-right:1.25rem!important}.py-md-35{padding-top:1.25rem!important;padding-bottom:1.25rem!important}.wrapper-a{position:absolute!important}.title.no-bg{background-color:transparent}}
+body {
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Microsoft JhengHei, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+}
+
+.bg {
+  background-color: #ccd4d6;
+}
+
+.bg-white {
+  background-color: #fff;
+}
+
+.no-bg {
+  background-color: transparent;
+}
+
+.fo-c1 {
+  color: #8b8a8a;
+}
+
+.fo-c2 {
+  color: #363d3f;
+}
+
+.px-35 {
+  padding-left: 1.25rem !important;
+  padding-right: 1.25rem !important;
+}
+
+.py-35 {
+  padding-top: 1.25rem !important;
+  padding-bottom: 1.25rem !important;
+}
+
+.pt-6 {
+  padding-top: 3.5rem !important;
+}
+
+.pt-65 {
+  padding-top: 3.75rem !important;
+}
+
+.brandT {
+  color: #342635;
+}
+
+.title {
+  color: #576163;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  font-weight: 700;
+  background-color: #ccd4d6;
+}
+
+.btn-wallpaper {
+  color: #edddc4;
+  background-color: #342635;
+  border-color: #342635;
+}
+
+.btn-wallpaper:hover {
+  color: #fff;
+}
+
+.btn-wallpaper:active,
+.btn-wallpaper:focus {
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(20, 15, 21, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(20, 15, 21, 0.25);
+}
+
+.btn-img:after {
+  content: "";
+  width: 28px;
+  height: 18px;
+  display: inline-block;
+  margin-left: 0.25rem;
+  vertical-align: text-top;
+  background-color: transparent;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: 28px 18px;
+  background-image: url(/images/bird.png?22193407e1c9f71eb6675022440e0808);
+}
+
+.wrapper {
+  position: relative;
+}
+
+.wrapper-a {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: static;
+  z-index: 100;
+}
+
+.content-box {
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  overflow: hidden;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+@media (min-width: 768px) {
+  .px-md-35 {
+    padding-left: 1.25rem !important;
+    padding-right: 1.25rem !important;
+  }
+
+  .pt-md-35,
+  .py-md-35 {
+    padding-top: 1.25rem !important;
+  }
+
+  .py-md-35 {
+    padding-bottom: 1.25rem !important;
+  }
+
+  .wrapper-a {
+    position: absolute !important;
+  }
+
+  .title.no-bg {
+    background-color: transparent;
+  }
+}
+
