--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -118,7 +118,9 @@ body {
     backface-visibility: hidden;
   }
 
-  &:hover {
+  &:hover,
+  &:active,
+  &:focus {
     .image {
       opacity: .5;
     }
